--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "My Blogs Name"
 author: "Default Author Name"
 description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
-
+baseurl: '/test_blog_site'
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "example@mail.com"
